--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -2,11 +2,11 @@
 @import './antd-variables.less';
 @import './variables.less';
 @import './mixin.less';
+@import './custom';
 
 #nprogress .bar {
     background: @primary-color !important;
 }
-
 .text-align-right{
     text-align: right;
 }
