--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -1,4 +1,5 @@
 
+// put here otherwise not work for popup div
 .tree-context-menu {
     z-index: 9;
     .ant-tree-node-content-wrapper {
@@ -16,6 +17,19 @@
                 height: 22px;
                 line-height: 21px;
             }
+        }
+    }
+}
+.edit-interface-name {
+    display: flex;
+    .left {
+        flex: 1;
+    }
+    .right {
+        width: 30px;
+        padding-left: 10px;
+        .save-button {
+          vertical-align: -5px
         }
     }
 }
