--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -1,5 +1,13 @@
+@import './antd-variables.less';
+
 body {
     background-color: #fff;
+}
+.ant-btn-link {
+    color: @primary-color;
+}
+.dp-color-primary {
+    color: @primary-color;
 }
 .dp-center {
     text-align: center;
