interface design pages

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -9,6 +9,12 @@ body {
 .dp-color-primary {
     color: @primary-color;
 }
+.dp-color-pass {
+    color: green;
+}
+.dp-color-fail {
+    color: #dc2626;
+}
 .dp-center {
     text-align: center;
 }
