interface design pages

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -42,6 +42,9 @@ body {
     padding: 3px 5px;
     cursor: pointer !important;
 }
+.dp-trans-80 {
+    opacity: 0.6;
+}
 .dp-tip-small {
     font-size: 12px;
     line-height: 12px;
