interface design pages

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -6,8 +6,14 @@ body {
 .ant-btn-link {
     color: @primary-color;
 }
+.dp-link {
+    cursor: pointer;
+}
 .dp-color-primary {
     color: @primary-color;
+}
+.dp-color-text {
+    color: @text-color;
 }
 .dp-color-pass {
     color: green;
