build request data

--- a/src/assets/css/antd-variables.less
+++ b/src/assets/css/antd-variables.less
@@ -10,6 +10,7 @@
 @heading-color: rgba(0, 0, 0, 0.85); // 标题色
 @text-color: rgba(0, 0, 0, 0.65); // 主文本色
 @text-color-secondary: rgba(0, 0, 0, 0.45); // 次文本色
+@text-color-light: #66696c; // 淡文本色
 @disabled-color: rgba(0, 0, 0, 0.25); // 失效色
 @border-radius-base: 2px; // 组件/浮层圆角
 @border-color-base: #d9d9d9; // 边框色
