--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -9,6 +9,10 @@ body {
 .dp-link {
     cursor: pointer;
 }
+.dp-link-primary {
+    cursor: pointer;
+    color: @primary-color;
+}
 .dp-color-primary {
     color: @primary-color;
 }
@@ -27,6 +31,10 @@ body {
 .dp-right {
     text-align: right;
 }
+.dp-light {
+    color: @text-color-light;
+}
+
 .dp-bg-light {
     background-color: #fafafa;
     button {
