rename a interface in tree

--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -2,6 +2,8 @@
 @import './antd-variables.less';
 @import './variables.less';
 @import './mixin.less';
+
+@import './adjust';
 @import './custom';
 
 #nprogress .bar {
