--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -28,6 +28,9 @@
 .dp-light {
     color: @text-color-light;
 }
+.dp-btn-gap {
+    margin: 0 3px;
+}
 
 .dp-bg-light {
     background-color: #fafafa;
