--- a/src/assets/css/variables.less
+++ b/src/assets/css/variables.less
@@ -8,3 +8,6 @@
 @headerBreadcrumbHeight: 34px;
 // 头部面包屑下tab导航高度
 @headerTabNavHeight: 36px;
+
+@itemSelectedBackground: #dce0e3;
+@itemSelectedBackgroundLight: #f5f5f5;
