--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -1,4 +1,5 @@
 @import './antd-variables.less';
+@import './variables.less';
 
 .dp-link {
     cursor: pointer;
@@ -31,7 +32,12 @@
 .dp-btn-gap {
     margin: 0 3px;
 }
-
+.dp-bg-selected {
+    background-color: @itemSelectedBackground;
+}
+.dp-bg-selected-light {
+    background-color: @itemSelectedBackgroundLight;
+}
 .dp-bg-light {
     background-color: #fafafa;
     button {
