response extractors and checkpoints

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -29,6 +29,9 @@
 .dp-light {
     color: @text-color-light;
 }
+.dp-disabled {
+    color: @disabled-color;
+}
 .dp-btn-gap {
     margin: 0 3px;
 }
