--- a/src/assets/css/adjust.less
+++ b/src/assets/css/adjust.less
@@ -31,21 +31,21 @@ body {
 }
 /* 内层轨道，它会覆盖外层轨道的样式 */
 ::-webkit-scrollbar-track-piece {
-    width: 4px;
+    width: 2px;
     margin: 0 -2px 0;
 }
 /* 滑块 */
 ::-webkit-scrollbar-thumb {
-    background-color: #ccc;
+    background-color: rgb(230, 233, 236);
     min-height: 60px;
     min-width: 60px;
-    border-radius: 5px;
+    border-radius: 2px;
 }
 /* 纵向滑块悬浮 */
 ::-webkit-scrollbar-thumb:vertical:hover {
-    background-color: #333;
+    background-color: rgb(230, 233, 236);
 }
 /* 横向滑块悬浮 */
 ::-webkit-scrollbar-thumb:horizontal:hover {
-    background-color: #333;
+    background-color: rgb(230, 233, 236);
 }
