add processor to scenario

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -65,7 +65,13 @@
 .dp-trans-80 {
     opacity: 0.6;
 }
+
+.dp-input-tip {
+    padding-top: 8px;
+    font-size: 13px;
+}
 .dp-tip-small {
+    padding-top: 8px;
     font-size: 12px;
     line-height: 12px;
     .ant-tooltip-inner {
