show test report

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -136,3 +136,13 @@
         flex: 1;
     }
 }
+
+.editor-wrapper {
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: hidden;
+
+    & > div {
+        height: 100%;
+    }
+}
