new execution logic

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -4,6 +4,10 @@
 .dp-link {
     cursor: pointer;
 }
+.dp-link-white {
+    cursor: pointer;
+    color: #c0c4cc;
+}
 .dp-link-primary {
     cursor: pointer;
     color: @primary-color;
