support body type multipart/form-data

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -198,6 +198,9 @@ width: 100%;
             input {
                 margin-top: 1px;
             }
+            .ant-select {
+                width: 70px;
+            }
         }
     }
 }
