--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -1,6 +1,9 @@
 @import './antd-variables.less';
 @import './variables.less';
 
+.dp-border {
+    font-weight: bolder;
+}
 .dp-link {
     cursor: pointer;
 }
