scenario category maintenance

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -15,6 +15,10 @@
     cursor: pointer;
     color: @primary-color;
 }
+.dp-btn-group {
+    padding-left: 6px;
+    padding-right: 6px;
+}
 .dp-color-primary {
     color: @primary-color;
 }
