--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -1,6 +1,8 @@
 @import './antd-variables.less';
 @import './variables.less';
-
+.dp-primary {
+  color: @primary-color;
+}
 .dp-border {
   font-weight: bolder;
 }
