feat: 环境管理模块开发

--- a/src/assets/css/antd-variables.less
+++ b/src/assets/css/antd-variables.less
@@ -1,7 +1,7 @@
 // 此文件针对 ant-design 定制主题:
 
 /* @primary-color: #1890ff; // 全局主色 */
-@primary-color: #009688;
+@primary-color: #1677ff;
 @link-color: #1890ff; // 链接色
 @success-color: #52c41a; // 成功色
 @warning-color: #faad14; // 警告色
@@ -21,4 +21,4 @@
 @menu-collapsed-width: 54px;
 
 // dark theme
-@menu-dark-bg: #222834;
+@menu-dark-bg: rgba(28, 34, 43, 1);
