--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -292,11 +292,11 @@
   .ant-menu {
     border: 1px solid #dedfe1;
     background: #f0f2f5;
-
     .ant-menu-item.menu-item {
       padding-left: 12px !important;
       height: 22px;
       line-height: 21px;
+      margin-top: 0px;
     }
   }
 }
