feat: merge code from main

--- a/src/components/SchemaEditor/schema.less
+++ b/src/components/SchemaEditor/schema.less
@@ -3,6 +3,7 @@
 .schemaEditor-content {
   width: @content-width;
   height: auto;
+  border: 1px solid @border-color;
   .directoryNode {
     display: block;
     position: relative;
@@ -166,7 +167,6 @@
     box-shadow: 0 2px 8px #00000026;
   }
   .floatingSetting-card{
-    //padding: 12px;
   }
   .floatingSetting-arrow{
     //position: absolute;
