feat: schema组件自测 + 新建组件模块自测

--- a/src/components/SchemaEditor/schema.less
+++ b/src/components/SchemaEditor/schema.less
@@ -3,7 +3,7 @@
 .schemaEditor-content {
   width: @content-width;
   height: auto;
-  border: 1px solid @border-color;
+  //border: 1px solid @border-color;
   .directoryNode {
     display: block;
     position: relative;
@@ -145,43 +145,6 @@
   .baseInfoSpace{
     display: inline-block;
     margin: 0 2px;
-  }
-
-  .setDataTypeAction{
-    &:hover{
-      background-color: @hover-bg-color;
-    }
-    //todo 设置不同数据类型的的颜色
-  }
-
-  .floatingSetting{
-    background-color: #ffffff;
-    z-index: 22;
-    width: 520px;
-    max-height: 600px;
-    //overflow-x: visible;
-    //overflow-y:scroll ;
-    background-color: #fff;
-    background-clip: padding-box;
-    border-radius: 2px;
-    box-shadow: 0 2px 8px #00000026;
-  }
-  .floatingSetting-card{
-  }
-  .floatingSetting-arrow{
-    //position: absolute;
-    //z-index: 99;
-    //top:4px;
-    //left: -6px;
-    //width: 12px;
-    //background-color: #ffffff;
-    //height: 12px;
-    //border-top-color: transparent;
-    //border-right-color: transparent;
-    //transform: rotate(45deg);
-    //border-bottom-color: #fff;
-    //border-left-color: #fff;
-    //box-shadow: -3px 3px 7px #00000012;
   }
 
 }
