fix: schema组件 bug fix

--- a/src/components/SchemaEditor/schema.less
+++ b/src/components/SchemaEditor/schema.less
@@ -149,6 +149,9 @@
 
 }
 .baseInfoKey{
+  min-width: 4px;
+  height: 16px;
+  line-height: 16px;
   &:focus,&:active,&:hover{
     border:none;
     outline: none;
