--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -336,3 +336,5 @@
 .drawer-content .ant-tabs-bar {
   margin: 0;
 }
+// input自动填充色
+input:-webkit-autofill { -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !important; }
