feat: 登录页面隐藏注册按钮

--- a/src/views/user/assets/login.less
+++ b/src/views/user/assets/login.less
@@ -23,6 +23,7 @@
             font-size: 16px;
             color: #86878B;
             position: relative;
+            cursor: pointer;
 
             &.menu-tab-active {
                 color: #0A0A0A;
