--- a/src/components/SchemaEditor/schema.less
+++ b/src/components/SchemaEditor/schema.less
@@ -9,6 +9,19 @@
     position: relative;
     overflow: hidden;
   }
+  .refNode{
+    .leafNode,.directoryNode,.verticalLine{
+      opacity: 0.7;
+      .action{
+        display: none;
+      }
+      &:hover {
+        .action{
+          display: none;
+        }
+      }
+    }
+  }
   .directoryContainerExpand {
     display: block;
   }
@@ -36,7 +49,6 @@
       input {
         background-color: @hover-bg-color;
         text-decoration: 4px solid underline;
-
       }
     }
   }
@@ -114,7 +126,7 @@
   }
 
   .action {
-    //display: none;
+    display: none;
     width: 150px;
   }
 
