feat: 完成引用类型前端开发，待联调

--- a/src/components/SchemaEditor/schema.less
+++ b/src/components/SchemaEditor/schema.less
@@ -10,7 +10,7 @@
     overflow: hidden;
   }
   .refNode{
-    .leafNode,.directoryNode,.verticalLine{
+    & > .leafNode,& >.directoryNode,& > .verticalLine{
       opacity: 0.7;
       .action{
         display: none;
