--- a/src/components/SchemaEditor/var.less
+++ b/src/components/SchemaEditor/var.less
@@ -3,5 +3,6 @@
 @border-color: #d9d9d9;
 //@hover-bg-color: #fafafa;
 @hover-bg-color: #f5f5f5;
+@hover-ref-bg-color: rgba(245,245,245,0.7);
 //@hover-bg-color: hsla(218, 33%, 94%, 1);;
 @content-width:800px;
