feat: 左侧侧边栏选中ui调整/接口管理ui调整

--- a/src/assets/css/antd-variables.less
+++ b/src/assets/css/antd-variables.less
@@ -21,7 +21,7 @@
 @menu-collapsed-width: 54px;
 
 // dark theme
-@menu-dark-bg: rgba(28, 34, 43, 1);
+@menu-dark-bg: #2A325A;
 
 // white theme
 @menu-white-bg: #ffffff;
