feat: 添加折叠收起组件+支持状态选择组件+引用组件样式优化

--- a/src/components/SchemaEditor/schema.less
+++ b/src/components/SchemaEditor/schema.less
@@ -11,10 +11,20 @@
   }
   .refNode{
     & > .leafNode,& >.directoryNode,& > .verticalLine{
-      opacity: 0.7;
+      opacity: 0.5;
       .action{
         display: none;
       }
+      &:hover {
+        .action{
+          display: none;
+        }
+      }
+    }
+  }
+  .refNode .refNode{
+    & > .leafNode,& >.directoryNode,& > .verticalLine{
+      opacity: 1;
       &:hover {
         .action{
           display: none;
