feat: 调整新建项目弹窗为全局弹窗

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -338,3 +338,7 @@
 }
 // input自动填充色
 input:-webkit-autofill { -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !important; }
+
+.create-project-modal.ant-modal .ant-modal-body {
+  padding: 0;
+}
