add interface into scenario

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -150,6 +150,10 @@
   }
 }
 
+.ant-select.dp-no-border .ant-select-selector {
+  border: 0 !important;
+}
+
 .dp-splits-v {
   display: flex;
   height: 100%;
@@ -306,7 +310,7 @@
   .toolbar {
     display: flex;
     height: 32px;
-    border-bottom: 1px solid #D0D7DE;
+    border: 1px solid #D0D7DE;
 
     .tips {
       flex: 1;
