--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -66,10 +66,10 @@
         z-index: 1;
         overflow-y: scroll;
         overflow-x: hidden;
-
         .ant-dropdown-menu-title-content {
           display: block;
           padding: 36px 0;
+          margin-bottom: 36px;
 
           .menu-scroll-item {
             width: 100%;
