--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -49,7 +49,8 @@
         .ant-dropdown-menu-title-content {
           display: flex;
           justify-content: space-between;
-          span{
+
+          span {
             font-weight: 400;
             font-size: 14px;
             color: #447DFD;
@@ -66,6 +67,7 @@
         z-index: 1;
         overflow-y: scroll;
         overflow-x: hidden;
+
         .ant-dropdown-menu-title-content {
           display: block;
           padding: 36px 0;
@@ -83,8 +85,9 @@
               margin-left: 4px;
               display: inline-block;
             }
-            .text{
-                display: inline-block;
+
+            .text {
+              display: inline-block;
             }
 
             &.my, &.recently {
@@ -100,5 +103,13 @@
 
       }
     }
+  }
+}
+
+.deeptest-res-code-dropdown {
+  .menu-con {
+    width: 360px;
+    height: 320px;
+    overflow-y: scroll;
   }
 }
