support file uploading in webpage client

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -231,6 +231,17 @@
   }
 }
 
+.flow-file-input2 {
+  line-height: 32px;
+  display: flex;
+  .input-container {
+    flex: 1;
+  }
+  .upload-container {
+    width: 46px;
+  }
+}
+
 .dp-full-modal {
   .ant-modal {
     max-width: 100%;
