support file uploading in webpage client

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -207,7 +207,7 @@
 }
 
 
-.flow-file-input {
+.upload-file-by-electron {
   line-height: 32px;
   input {
     width: calc(100% - 46px)
@@ -231,7 +231,7 @@
   }
 }
 
-.flow-file-input2 {
+.upload-file {
   line-height: 32px;
   display: flex;
   .input-container {
