feat: 测动态执行报告样式问题修复等

--- a/src/views/component/Report/components/LogTreeView.less
+++ b/src/views/component/Report/components/LogTreeView.less
@@ -7,3 +7,17 @@
 .log-item{
   margin-top: 16px;
 }
+.header-text{
+  width: 100%;
+  //padding: 0 16px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+
+  .label{
+
+  }
+  .value{
+
+  }
+}
