--- a/src/views/component/Report/components/LogTreeView.less
+++ b/src/views/component/Report/components/LogTreeView.less
@@ -8,7 +8,8 @@
   margin-top: 16px;
 }
 .header-text{
-  width: 100%;
+  max-width: 100%;
+  display: inline-block;
   //padding: 0 16px;
   overflow: hidden;
   white-space: nowrap;
