--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -360,3 +360,8 @@ input:-webkit-autofill { -webkit-box-shadow: 0 0 0px 1000px #ffffff inset !impor
 .create-project-modal.ant-modal .ant-modal-body {
   padding: 0;
 }
+
+.term {
+  font-weight: bold;
+  //font-style:italic;
+}
