--- a/src/components/Docs/components/SchemaViewer/schema.less
+++ b/src/components/Docs/components/SchemaViewer/schema.less
@@ -1,12 +1,13 @@
 
 @import "var.less";
 .schemaViewer-content {
-  width: @content-width;
+  width: calc(100% + 24px);
   height: auto;
   //border: 1px solid @border-color;
   .rootNode{
-    position: relative;
+    //position: relative;
     left: -24px;
+    //margin-left: 24px;
   }
 
   .directoryNode {
