--- a/src/components/Docs/components/SchemaViewer/var.less
+++ b/src/components/Docs/components/SchemaViewer/var.less
@@ -5,4 +5,4 @@
 @hover-bg-color: #f5f5f5;
 @hover-ref-bg-color: rgba(245,245,245,0.7);
 //@hover-bg-color: hsla(218, 33%, 94%, 1);;
-@content-width:800px;
+@content-width:100%;
