--- a/src/components/Docs/components/SchemaViewer/schema.less
+++ b/src/components/Docs/components/SchemaViewer/schema.less
@@ -8,6 +8,10 @@
     //position: relative;
     left: -24px;
     //margin-left: 24px;
+    &.rootNode-array {
+      left:0;
+    }
+
   }
 
   .directoryNode {
