fix: 登录边框问题

--- a/src/views/user/assets/login.less
+++ b/src/views/user/assets/login.less
@@ -73,7 +73,7 @@
 :deep(.login-input-item .ant-input-password.ant-input-affix-wrapper) {
     border: none;
     outline: none;
-    background: none;
+    background: transparent;
     padding: 0;
     height: 100%;
 }
@@ -93,7 +93,7 @@
     line-height: 20px;
     letter-spacing: -0.559811px;
     color: #FFFFFF;
-    text-align: center; 
+    text-align: center;
     border: none;
     box-shadow: unset;
 }
