add request info in exec report

--- a/src/assets/css/global.less
+++ b/src/assets/css/global.less
@@ -6,6 +6,10 @@
 @import './adjust';
 @import './custom';
 
+.hidden {
+  display: none;
+}
+
 #nprogress .bar {
   background: @primary-color !important;
 }
