--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -166,8 +166,8 @@
 
   .right {
     height: 100%;
-    overflow-y: hidden;
-    overflow-x: hidden;
+    //overflow-y: hidden;
+    //overflow-x: hidden;
   }
 }
 
