--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -171,6 +171,86 @@
   }
 }
 
+.dp-res-code-dropdown {
+  .menu-con {
+    width: 360px;
+    height: 320px;
+    overflow-y: scroll;
+  }
+}
+
+.dp-tabs-full-height{
+  height: 100%;
+  .ant-tabs-content {
+    height: calc(100% - 56px);
+    .ant-tabs-tabpane {
+      height: 100%;
+    }
+  }
+}
+.dp-drawer-full-height {
+  .ant-drawer-body {
+    height: calc(100% - 55px);
+    padding: 16px;
+  }
+}
+
+.dp-tree-container {
+  height: 100%;
+  .tree-filter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50px;
+    .search-input {
+      margin-left: 16px;
+      margin-right: 8px;
+    }
+
+    .add-btn {
+      margin-left: 2px;
+      margin-right: 16px;
+      cursor: pointer;
+    }
+  }
+
+  .tree-content {
+    height: calc(100% - 50px);
+    overflow: auto;
+    margin: 0 8px;
+
+    .deeptest-tree {
+      .tree-title {
+        position: relative;
+
+        .tree-title-text {
+          display: inline-block;
+          width: calc(100% - 24px);
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+        }
+
+        //&:hover{
+        //  .more-icon {
+        //    background-color: #f5f5f5;
+        //  }
+        //}
+        .more-icon {
+          position: absolute;
+          right: -8px;
+          width: 20px;
+        }
+      }
+    }
+
+    .nodata-tip {
+      margin-top: 8px;
+      text-align: center;
+    }
+  }
+}
+
 .splitter {
   min-width: 1px;
   cursor: col-resize;
