adjust debug page height

--- a/src/assets/css/custom.less
+++ b/src/assets/css/custom.less
@@ -189,6 +189,13 @@
   }
 }
 
+.dp-drawer-full-height {
+  .ant-drawer-body {
+    height: calc(100% - 55px);
+    padding: 0 16px;
+  }
+}
+
 .dp-tabs-full-height{
   height: 100%;
   .ant-tabs-bar {
@@ -201,12 +208,7 @@
     }
   }
 }
-.dp-drawer-full-height {
-  .ant-drawer-body {
-    height: calc(100% - 55px);
-    padding: 16px;
-  }
-}
+
 .dp-card-full-height {
   .ant-card-head {
     height: 52px;
